(executable
  (name main)
  (public_name pa_ocaml.boot)
  (package earley)
  (modules :standard)
  (libraries compiler-libs.common earley.core earley.str earley.helpers))

(rule
  (targets
    main.ml
    pa_lexing.ml
    pa_main.ml
    pa_ocaml.ml
    pa_parser.ml
    quote.ml)
  (action (progn
    (copy ../static/boot/%{ocaml_version}/main.ml main.ml)
    (copy ../static/boot/%{ocaml_version}/pa_lexing.ml pa_lexing.ml)
    (copy ../static/boot/%{ocaml_version}/pa_main.ml pa_main.ml)
    (copy ../static/boot/%{ocaml_version}/pa_ocaml.ml pa_ocaml.ml)
    (copy ../static/boot/%{ocaml_version}/pa_parser.ml pa_parser.ml)
    (copy ../static/boot/%{ocaml_version}/quote.ml quote.ml))))
