(library
 (name earley_parser)
 (public_name earley.core)
 (synopsis "Earley parser combinator library")
 (modules :standard \ earley_str)
 (private_modules internals container)
 (libraries unix))

(library
 (name earley_str_regexp)
 (public_name earley.str)
 (modules earley_str)
 (wrapped false)
 (libraries earley_parser str))
