(library
  (name earley_ocaml)
  (public_name earley.ocaml)
  (synopsis "Extensible OCaml parser library using Earley")
  (modules :standard \ main)
  (preprocess (action (run pa_ocaml.boot %{input-file})))
  (libraries
    compiler-libs.common
    earley.core earley.str earley.helpers))

(executable
  (name main)
  (public_name pa_ocaml)
  (package earley)
  (modules main)
  (libraries
    compiler-libs.common
    earley.core earley.str earley.ocaml earley.helpers))

(rule
  (targets quote.ml)
  (action (with-stdout-to quote.ml (progn
    (run pa_ocaml.boot --ascii ../static/tools/generic_quote.ml)
    (echo "(* asttypes.mli *)\n")
    (run ../tools/pa_quote.exe ../static/tools/%{ocaml_version}/asttypes.mli)
    (echo "(* parsetree.mli *)\n")
    (run ../tools/pa_quote.exe ../static/tools/%{ocaml_version}/parsetree.mli))))
  (deps
    ../tools/pa_quote.exe
    ../static/tools/generic_quote.ml
    ../static/tools/%{ocaml_version}/asttypes.mli
    ../static/tools/%{ocaml_version}/parsetree.mli))
